--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "gulp-webp": "^4.0.1",
     "gulp-webp-css": "^1.1.0",
     "gulp-webp-html": "^1.0.2",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "sass": "^1.69.7",
     "style-loader": "^3.3.4",
     "tailwindcss": "^3.4.3",
